Fix: Add padding to bottom of app component as to make the "more places" link visible above fixed positioned footer.

--- a/src/scss/app/_app.scss
+++ b/src/scss/app/_app.scss
@@ -5,7 +5,9 @@
   font-family: $font-family-body;
 
   main {
-    padding-top: 125px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+
   }
 
 }
